--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
+    "country-list": "^1.1.0",
     "ejs": "^2.5.5",
     "ejs-mate": "^2.3.0",
     "elasticsearch-sanitize": "^2.0.0",
